--- a/index.html
+++ b/index.html
@@ -3,43 +3,77 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-  <title>Anthony Nicholson</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.9.0/devicon.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Anthony Nicholson Web Development</title>
 </head>
 <body>
   <div class="container">
-    <div class="card">
+    <header>
       <img src="images/portrait.png" alt="profile picture" class="profile-img-size">
-      <h1>👋🏻 , I'm Anthony</h1>
-      <p>A student at <a href="https://www.lewagon.com/tokyo" class="brown-btn">Le Wagon Tokyo</a></p> 
-    </div>
-
-    <!-- <div class="card">
-      <h2>Tech Skills</h2>
-      <p>lol</p>
-    </div> -->
-
-    <div class="card">
-      <h2>Hobbies</h2>
-      <p>When not learning, I love gaming 🕹 and reading 📖 </p>
-      <img src="images/steve_jobs_book_cover.jpg" alt="steve jobs by walter isaacson">
-      <p>Currently reading: <strong>Steve Jobs by Walter Isaacson</strong></p>
-    </div>
-
-    <div class="cat-card">
-      <h2>Owner of 5 Cats, Master of None</h2>
-      <img src="images/cats.jpg" alt="my cats" class="card-img-size">
-    </div>
-
-    <div class="card">
-    <h2>Let's connect!</h2>
-      <ul cl>
+      <h1>Anthony Nicholson</h1>
+      <h2>Web Development</h2>
+    </header>
+    <main>
+      <section>
+        <h3>Portfolio</h3>
+        <div class="cards">
+          <div class="card"">
+          <p>Coming Soon</p>
+          </div>
+          <div class="card"">
+            <p>Coming Soon</p>
+          </div>
+          <div class="card"">
+            <p>Coming Soon</p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h3>Skills</h3>
+        <div class="cards-skills">
+          <div class="card-skills">
+            <p>Primary</p>
+            <ul>
+              <li><i class="devicon-html5-plain-wordmark colored"></i></li>
+              <li><i class="devicon-css3-plain-wordmark colored"></i></li>
+              <li><i class="devicon-javascript-plain colored"></i></li>
+              <li><i class="devicon-bootstrap-plain colored"></i></li>
+            </ul>
+          </div>
+          <div class="card-skills">
+            <p>Secondary</p>
+            <ul>
+              <li><i class="devicon-ruby-plain-wordmark colored"></i></li>
+              <li><i class="devicon-postgresql-plain-wordmark colored"></i></li>
+              <li><i class="devicon-rails-plain-wordmark colored"></i></li>
+              <!-- <li><i class="devicon-git-plain-wordmark colored"></i></li>
+              <li><i class="devicon-github-original-wordmark colored"></i></li>
+              <li><i class="devicon-visualstudio-plain colored"></i></li> -->
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
+  </div>
+  <footer>
+    <div>
+      <p>Let's connect!</p>
+      <ul>
         <li><a href="https://github.com/munkeyto"><i class="fab fa-github-square icons"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/anthonynicholson/"><i class="fab fa-linkedin icons"></i></a></li>
-        <!-- <li><a href="http://"><i class="fab fa-instagram-square icons"></i></a></li>
-        <li><a href="http://"><i class="fab fa-twitter-square icons"></i></a></li> -->
+        <li><a href="https://www.linkedin.com/in/anthonynicholson/"><i class="devicon-linkedin-plain colored"></i></a></li>
+        <li><a href="http://"><i class="fab fa-instagram-square icons"></i></a></li>
+        <li><a href="http://"><i class="devicon-twitter-original colored"></i></a></li>
       </ul>
     </div>
-  </div>
+    <div>
+      <p>View this page in a different design!</p>
+      <nav>
+        <li><i class="fas fa-question"></i></li>
+        <li><i class="fas fa-question"></i></li>
+        <li><i class="fas fa-question"></i></li>
+      </nav>
+    </div>
+  </footer>
 </body>
 </html>
